tests/fail/invalid_id_underscore.tig
let
    var _abc := "This is an invalid identifier."
in
end
